--- a/css/app.scss
+++ b/css/app.scss
@@ -1,6 +1,9 @@
 ---
 ---
 
+$blue: #051357;
+$red: #D82F20;
+
 body {
   margin: 0;
   padding: 0;
@@ -12,38 +15,40 @@ body {
     margin-top: 0;
     padding: 15px;
     text-align: center;
-    background: #051357;
+    background: $blue;
     color: white;
     font-family: Georgia, serif;
-    border-bottom: 5px solid #D82F20;
+    border-bottom: 5px solid $red;
+    font-size: 230%;
   }
 
-  a, a:hover {
-   color: white;
-   text-decoration: none;
-  }
+  a { color: white }
+  a:hover { text-decoration: underline }
 }
 
 .episode {
-  padding: 0 0 10px 0;
-  border-bottom: 1px solid #eee;
+  padding: 15px;
+  border-bottom: 1px dashed #eee;
 
   h2 {
-    font-size: 250%;
+    margin-top: 0;
+    font-size: 200%;
   }
 
-  img {
-    margin: 15px 0;
+  a {
+   color: #333;
+   text-decoration: none;
   }
 
-  p.date {
-    font-style: italic;
+  a h2:hover {
+    color: $red;
+    text-decoration: underline;
   }
 
-  p.description {
-    font-size: 150%;
-    margin-bottom: 20px;
-  }
+  a p.date:hover { color: $red }
+  img { margin: 15px 0 }
+  p.date { font-style: italic }
+  p.description { font-size: 150% }
 
   audio {
     width: 100%;
@@ -56,11 +61,9 @@ body {
   padding: 25px;
   color: white;
   font-weight: normal;
-  background: #051357;
+  background: $blue;
   text-align: center;
-  border-top: 5px solid #D82F20;
+  border-top: 5px solid $red;
 
-  a, a:hover {
-    color: white;
-  }
+  a { color: white }
 }
