--- a/css/app.scss
+++ b/css/app.scss
@@ -52,12 +52,11 @@ body {
 
   audio {
     width: 100%;
-    margin-bottom: 40px;
+    margin: 30px 0;
   }
 }
 
 #footer {
-  margin: 0;
   padding: 25px;
   color: white;
   font-weight: normal;
