--- a/css/app.scss
+++ b/css/app.scss
@@ -10,6 +10,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
+input { margin: 30px 0 }
+
 #header {
   h1 {
     margin-top: 0;
@@ -24,6 +26,15 @@ body {
 
   a { color: white }
   a:hover { text-decoration: underline }
+}
+
+#search-results {
+  margin-bottom: 40px;
+
+  a { color: $blue }
+  a:hover { color: $red }
+
+  li { margin-bottom: 40px }
 }
 
 .episode {
