--- a/css/app.scss
+++ b/css/app.scss
@@ -38,12 +38,16 @@ input { margin: 30px 0 }
 }
 
 .episode {
-  padding: 15px;
+  padding: 15px 0;
   border-bottom: 1px dashed #eee;
 
   h2 {
-    margin-top: 0;
+    margin-top: 10px;
     font-size: 200%;
+
+    &:first-of-type {
+      margin-top: 0
+    }
   }
 
   a {
