--- a/css/app.scss
+++ b/css/app.scss
@@ -87,6 +87,6 @@ input { margin: 30px 0 }
   ul.pagination-links {
     padding-bottom: 20px;
     margin-bottom: 20px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid $red;
   }
 }
