adds api link to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
       <ul class="list-inline">
         <li><a href="#">About</a></li>
         <li><a href="/search">Search</a></li>
+        <li><a href="/api.json">API</a></li>
       </ul>
     </div>
   </div>
