--- a/css/app.scss
+++ b/css/app.scss
@@ -15,7 +15,7 @@ input { margin: 30px 0 }
 #header {
   h1 {
     margin-top: 0;
-    padding: 15px;
+    padding: 30px 0;
     text-align: center;
     background: $blue;
     color: white;
@@ -38,16 +38,12 @@ input { margin: 30px 0 }
 }
 
 .episode {
-  padding: 15px 0;
+  padding: 20px 0;
   border-bottom: 1px dashed #eee;
 
   h2 {
-    margin-top: 10px;
+    margin-top: 0;
     font-size: 200%;
-
-    &:first-of-type {
-      margin-top: 0
-    }
   }
 
   a {
@@ -63,7 +59,10 @@ input { margin: 30px 0 }
   a p.date:hover { color: $red }
   img { margin: 15px 0 }
   p.date { font-style: italic }
-  p.description { font-size: 150% }
+  p.description {
+    font-size: 150%;
+    margin-bottom: 0;
+  }
 
   audio {
     width: 100%;
