--- a/css/app.scss
+++ b/css/app.scss
@@ -70,6 +70,8 @@ input { margin: 30px 0 }
   }
 }
 
+#index .episode:first-of-type { padding-top: 0 }
+
 #footer {
   padding: 25px;
   color: white;
@@ -79,9 +81,6 @@ input { margin: 30px 0 }
   border-top: 5px solid $red;
 
   a { color: white }
-  a:hover {
-
-  }
 
   ul.pagination-links {
     padding-bottom: 20px;
