--- a/css/app.scss
+++ b/css/app.scss
@@ -62,6 +62,7 @@ input { margin: 30px 0 }
     text-decoration: underline;
   }
 
+  a p.description { color: #333 }
   a p.date:hover { color: $red }
   img { margin: 15px 0 }
   p.date { font-style: italic }
