small tweaks to about, link colors, footer disclaimer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
         <li><a href="/api.json">API</a></li>
       </ul>
 
-      <p>This site is not affiliated with <a href="https://thisamericanlife.org" target="_blank">thisamericanlife.org</a> in anyway. It's creation, existense, and on-going maintenance is for educational purposes only.</p>
+      <p>This site is a fan edit of <a href="https://thisamericanlife.org" target="_blank">thisamericanlife.org</a> and not officially affiliated in anyway. It's creation, existense, and on-going maintenance is for educational purposes only.</p>
     </div>
   </div>
 </body>
