--- a/css/app.scss
+++ b/css/app.scss
@@ -16,16 +16,20 @@ a { color: $red }
 a:hover { color: $blue }
 
 #header {
+  margin-top: 0;
+  padding: 30px 0;
+  text-align: center;
+  background: $blue;
+  color: white;
+  border-bottom: 5px solid $red;
+
   h1 {
-    margin-top: 0;
-    padding: 30px 0;
-    text-align: center;
-    background: $blue;
-    color: white;
-    font-family: Georgia, serif;
-    border-bottom: 5px solid $red;
+    margin: 0 0 5px 0;
     font-size: 230%;
+    font-family: Georgia, serif;
   }
+
+  p { margin: 0 }
 
   a { color: white }
   a:hover { text-decoration: underline }
