new header for clarity

--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -9,5 +9,5 @@ layout: default
   <p class="date">#{{slug}} - {{page.date | date: "%B %-d, %Y"}}</p>
   <img src="{{site.assets}}/images/{{slug}}.jpg" class="img-responsive">
   <p class="description">{{page.description}}</p>
-  <audio src="{{site.assets}}/episodes/{{slug}}.mp3" controls preload></audio>
+  <audio src="{{site.assets}}/audios/{{slug}}.mp3" controls preload></audio>
 </div>
