--- a/css/app.scss
+++ b/css/app.scss
@@ -27,6 +27,8 @@ a:hover { color: $blue }
     margin: 0 0 5px 0;
     font-size: 230%;
     font-family: Georgia, serif;
+
+    span { color: $red }
   }
 
   p { margin: 0 }
