--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 <body>
   <div class="container-fluid" style="padding: 0">
     <div id="header">
-      <h1><a href="/">This American Life</a></h1>
+      <h1><a href="/">this<span>american</span>life.co</a></h1>
       <p>a fan edit of <a href="https://thisamericanlife.org" target="_blank">thisamericanlife.org</a></p>
     </div>
   </div>
