--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
   <title>{{page.title}}</title>
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="{{ site.url }}{{ page.id }}">
   <meta property="og:type" content="{% if page.id %}article{% else %}website{% endif %}">
   <meta property="og:title" content="{{ page.title }}">
-  <meta property="og:description" content="{{ site.description }}">
+  <meta property="og:description" content="{{ page.description }}">
   <meta property="og:image" content="
     {% if page.id %}
       {{ site.assets }}/images/{{ page.id | split: '/' | last}}.jpg?v={{ site.time | date: '%s' }}
@@ -24,7 +25,7 @@
   <meta property="twitter:domain" content="thisamericanlife.co">
   <meta property="twitter:url" content="{{ site.url }}{{ page.id }}">
   <meta name="twitter:title" content="{{ page.title }}">
-  <meta name="twitter:description" content="{{ site.description }}">
+  <meta name="twitter:description" content="{{ page.description }}">
   <meta name="twitter:image" content="
     {% if page.id %}
       {{ site.assets }}/images/{{ page.id | split: '/' | last}}.jpg?v={{ site.time | date: '%s' }}
