--- a/css/app.scss
+++ b/css/app.scss
@@ -112,3 +112,39 @@ a:hover { color: $blue }
     border-bottom: 1px solid $red;
   }
 }
+
+/*==========  Mobile First Method  ==========*/
+
+/* Custom, iPhone Retina */
+@media only screen and (min-width : 320px) {
+
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (min-width : 480px) {
+  #header {
+    h1 { font-size: 300% }
+    p {font-size: 150% }
+  }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+  #header {
+    h1 { font-size: 400% }
+    p {font-size: 200% }
+  }
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+  #header {
+    h1 { font-size: 500% }
+    p {font-size: 200% }
+  }
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
+
+}
