--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
       <ul class="list-inline chunk">
         <li><a href="/about">About</a></li>
         <li><a href="/search">Search</a></li>
-        <li><a href="/api.json">API</a></li>
+        <li><a href="/about#api">API</a></li>
       </ul>
 
       <p>This site is a fan edit of <a href="https://thisamericanlife.org" target="_blank">thisamericanlife.org</a> and not officially affiliated in anyway. It's creation, existense, and on-going maintenance is for educational purposes only.</p>
