--- a/css/app.scss
+++ b/css/app.scss
@@ -92,7 +92,7 @@ a:hover { color: $blue }
 
 #about {
   h2 { margin-bottom: 30px; text-align: center }
-  h3 { font-weight: bold, color: $blue }
+  h3 { font-weight: bold; font-size: 200% }
   p { font-size: 130% }
 }
 
