--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -8,4 +8,8 @@ layout: default
   <img src="{{site.assets}}/images/{{page.slug}}.jpg" class="img-responsive">
   <p class="description">{{page.description}}</p>
   <audio src="{{site.assets}}/audios/{{page.slug}}.mp3" controls preload></audio>
+  <ul class="links list list-inline">
+    <li><a href="{{site.assets}}/audios/{{page.slug}}.mp3" target="_blank">mp3 link</a></li>
+    <li><a href="https://tal.fm/{{page.number}}" target="_blank">tal.fm/{{page.number}}</li>
+  </ul>
 </div>
