--- a/css/app.scss
+++ b/css/app.scss
@@ -82,7 +82,14 @@ a:hover { color: $blue }
 
   audio {
     width: 100%;
-    margin: 30px 0 0 0;
+    margin: 30px 0 10px 0;
+  }
+
+  ul.links {
+    text-align: center;
+
+    a { color: $blue }
+    a:hover {color: $red; text-decoration: underline }
   }
 }
 
