--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="episode">
   <h2>{{page.title}}</h2>
-  <p class="date">#{{page.slug}} - {{page.date | date: "%B %-d, %Y"}}</p>
+  <p class="date">#{{page.slug}} - {{page.date | date: "%-d %B %Y"}}</p>
   <img src="{{site.assets}}/images/{{page.slug}}.jpg" class="img-responsive">
   <p class="description">{{page.description}}</p>
   <audio src="{{site.assets}}/audios/{{page.slug}}.mp3" controls preload></audio>
