makes the period in the header red, including new meta og:image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 <body>
   <div class="container-fluid" style="padding: 0">
     <div id="header">
-      <h1><a href="/">this<span>american</span>life.co</a></h1>
+      <h1><a href="/">this<span>american</span>life<span>.</span>co</a></h1>
       <p>a fan edit of <a href="https://thisamericanlife.org" target="_blank">thisamericanlife.org</a></p>
     </div>
   </div>
