--- a/css/app.scss
+++ b/css/app.scss
@@ -98,8 +98,13 @@ a:hover { color: $blue }
 }
 
 #about {
-  h2 { margin-bottom: 30px; text-align: center }
-  h3 { font-weight: bold; font-size: 200% }
+  h3 {
+    font-weight: bold;
+    font-size: 200%;
+    margin: 30px 0;
+    text-align: center
+  }
+
   p { font-size: 130% }
 }
 
