--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,16 @@
     {%- endif %}
   ">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G95HMQEVY5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-G95HMQEVY5');
+  </script>
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/app.css?v={{ site.time | date: '%s' }}" type="text/css">
 </head>
