--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -5,11 +5,11 @@ layout: default
 <div class="episode">
   <h2>{{page.title}}</h2>
   <p class="date">#{{page.slug}} - {{page.date | date: "%-d %B %Y"}}</p>
-  <img src="{{site.assets}}/images/{{page.slug}}.jpg" class="img-responsive">
-  <p class="description">{{page.description}}</p>
   <audio src="{{site.assets}}/audios/{{page.slug}}.mp3" controls preload></audio>
   <ul class="links list list-inline">
-    <li><a href="{{site.assets}}/audios/{{page.slug}}.mp3" target="_blank">mp3 link</a></li>
-    <li><a href="https://tal.fm/{{page.number}}" target="_blank">tal.fm/{{page.number}}</li>
+    <li><a href="{{site.assets}}/audios/{{page.slug}}.mp3" target="_blank">MP3</a></li>
+    <li><a href="https://tal.fm/{{page.number}}" target="_blank">TAL.FM/{{page.number}}</a></li>
   </ul>
+  <img src="{{site.assets}}/images/{{page.slug}}.jpg" class="img-responsive">
+  <p class="description">{{page.description}}</p>
 </div>
