--- a/css/app.scss
+++ b/css/app.scss
@@ -82,10 +82,16 @@ a:hover { color: $blue }
 
   audio {
     width: 100%;
-    margin: 30px 0 10px 0;
+    margin: 10px 0 -10px 0;
+    opacity: 100%;
   }
 
   ul.links {
+    font-size: 80%;
+    margin: 0 15px 20px 15px;
+    padding: 7px 3px 3px 3px;
+    border: 1px dotted #858585;
+    border-radius: 5px;
     text-align: center;
 
     a { color: $blue }
