better audio player links stylingz

--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -7,7 +7,8 @@ layout: default
   <p class="date">#{{page.slug}} - {{page.date | date: "%-d %B %Y"}}</p>
   <audio src="{{site.assets}}/audios/{{page.slug}}.mp3" controls preload></audio>
   <ul class="links list list-inline">
-    <li><a href="{{site.assets}}/audios/{{page.slug}}.mp3" target="_blank">MP3</a></li>
+    <li>LINKS</li>
+    <li><a href="{{site.assets}}/audios/{{page.slug}}.mp3" target="_blank">DIRECT MP3</a></li>
     <li><a href="https://tal.fm/{{page.number}}" target="_blank">TAL.FM/{{page.number}}</a></li>
   </ul>
   <img src="{{site.assets}}/images/{{page.slug}}.jpg" class="img-responsive">
