--- a/css/app.scss
+++ b/css/app.scss
@@ -77,7 +77,7 @@ a:hover { color: $blue }
   p.date { font-style: italic }
   p.description {
     font-size: 150%;
-    margin-bottom: 0;
+    margin-bottom: 20px;
   }
 
   audio {
