--- a/css/app.scss
+++ b/css/app.scss
@@ -152,24 +152,17 @@ h2 {
 @media only screen and (min-width : 480px) {
   #header {
     h1 { font-size: 300% }
-    p {font-size: 150% }
   }
 }
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px) {
-  #header {
-    h1 { font-size: 400% }
-    p {font-size: 200% }
-  }
+  #header { h1 { font-size: 400% } }
 }
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
-  #header {
-    h1 { font-size: 500% }
-    p {font-size: 200% }
-  }
+  #header { h1 { font-size: 500% } }
 }
 
 /* Large Devices, Wide Screens */
