Switching from google to simple analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,16 +32,6 @@
     {%- endif %}
   ">
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G95HMQEVY5"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-G95HMQEVY5');
-  </script>
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/app.css?v={{ site.time | date: '%s' }}" type="text/css">
 </head>
@@ -88,5 +78,6 @@
       <p>This site is a fan edit of <a href="https://thisamericanlife.org" target="_blank">thisamericanlife.org</a> and not officially affiliated in anyway. It's creation, existense, and on-going maintenance is for educational purposes only.</p>
     </div>
   </div>
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 </html>
