adds link to 'a fan edit' in the header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
   <div class="container-fluid" style="padding: 0">
     <div id="header">
       <h1><a href="/">this<span>american</span>life<span>.</span>co</a></h1>
-      <p>a fan edit of <a href="https://thisamericanlife.org" target="_blank">thisamericanlife.org</a></p>
+      <p><a href="/about">a fan edit</a> of <a href="https://thisamericanlife.org" target="_blank">thisamericanlife.org</a></p>
     </div>
   </div>
   <div class="container-fluid">
