--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -8,9 +8,8 @@ layout: default
   <p class="description">{{page.description}}</p>
   <audio src="{{site.assets}}/audios/{{page.slug}}.mp3" controls preload></audio>
   <ul class="links list list-inline">
-    <li>LINKS</li>
-    <li><a href="{{site.assets}}/audios/{{page.slug}}.mp3" target="_blank">DIRECT MP3</a></li>
-    <li><a href="https://tal.fm/{{page.number}}" target="_blank">TAL.FM/{{page.number}}</a></li>
+    <li><a href="{{site.assets}}/audios/{{page.slug}}.mp3" target="_blank">mp3</a></li>
+    <li><a href="https://www.thisamericanlife.org/s/{{page.number}}" target="_blank">thisamericanlife.org</a></li>
   </ul>
   <img src="{{site.assets}}/images/{{page.slug}}.jpg" class="img-responsive">
 </div>
